[gd_scene load_steps=3 format=3 uid="uid://jvqq4arjjw3d"]

[ext_resource type="Script" path="res://scripts/hand.gd" id="1_khv8h"]
[ext_resource type="PackedScene" uid="uid://b1tdlb6sp1n04" path="res://scenes/Cell.tscn" id="1_p3kuk"]

[node name="Hand" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_khv8h")

[node name="Cell" parent="." instance=ExtResource("1_p3kuk")]
position = Vector2(34.2857, 34.2857)

[node name="Cell2" parent="." instance=ExtResource("1_p3kuk")]
position = Vector2(34.2857, 308.571)

[node name="Cell3" parent="." instance=ExtResource("1_p3kuk")]
position = Vector2(34.2857, 582.857)

[node name="Cell4" parent="." instance=ExtResource("1_p3kuk")]
position = Vector2(34.2857, 857.143)

[node name="Cell5" parent="." instance=ExtResource("1_p3kuk")]
position = Vector2(34.2857, 1131.43)
